# HKPUG-Meetup85-AgenticWorkflow

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: agentic_example.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb
src/: utils.py
src/assets/: orders.csv  products.csv
src/schema/: __init__.py  customers.py  orders.py  products.py
