[project]
name = "hkpug-meetup85-agenticworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "gevent>=25.4.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic-ai==0.0.42",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
]
